# not-your-it-guy

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
frontend/: index.html
frontend/v2/: index.html
src/migrations/: env.py
src/migrations/versions/: 0001_create_employees.py  0002_add_private_email_and_password_hash.py
src/not_your_it_guy/: auth.py  main.py  models.py
src/not_your_it_guy/db/: models.py  session.py
src/not_your_it_guy/logger/: logger_provider.py
src/not_your_it_guy/routers/: responses.py
src/not_your_it_guy/services/: entra_id_mock_service.py  router_service.py  sms_service.py  subgraph_factory.py  welcome_email_service.py
src/not_your_it_guy/subgraphs/: employee_onboarding.py
src/not_your_it_guy/tools/: ad_user_tool.py  resend_email_tool.py  sendgrid_email_tool.py  twilio_sms_tool.py
